Removed a bug from routeLengthFinder, other sp graph calculation