@@ -15,7 +15,7 @@ public class SPGraph extends Graph {
     private double reach;
     private static final double epsilon = 0.00001;
     private WeightBalancer wg;
-    private final NodePairSet hyperNodes;
+    private final GraphNodePairSet hyperNodes;
     private boolean bi;
 
     public double getReach() { return reach; }
@@ -29,12 +29,12 @@ public class SPGraph extends Graph {
         return hyperNodes.getNodePair(start, stop);
     }
 
-    private class NodePairSet {
+    private class GraphNodePairSet {
         private long idCnt = 0;
         private final Graph gr;
         private final HashMap<NodePair, NodePair> pairs = new HashMap<>();
 
-        private NodePairSet(Graph gr) {
+        private GraphNodePairSet(Graph gr) {
             this.gr = gr;
         }
 
@@ -92,7 +92,7 @@ public class SPGraph extends Graph {
         return hyperNodes.addNodePair(id, s, e);
     }
 
-    public SPGraph() { hyperNodes = new NodePairSet(this); }
+    public SPGraph() { hyperNodes = new GraphNodePairSet(this); }
 
     public SPGraph(Graph g, double reach, boolean bidirectional, WeightBalancer wb) {
         this.reach = reach;
@@ -100,59 +100,42 @@ public class SPGraph extends Graph {
         this.bi = bidirectional;
 
         // Construct hypergraph using every possible starting node
-        hyperNodes = new NodePairSet(this);
+        hyperNodes = new GraphNodePairSet(this);
         int i = 0;
         for (Node n: g.getNodes().values()) {
             if (++i%1000==0) System.out.println(i + "/" + g.getNodes().size());
-            contract(n, (added, last, pLen) -> {
-                if (pLen > reach + epsilon && pLen - wg.getWeight(last) <= reach + epsilon) {
-                    Set<Edge> edgeSet = new HashSet<>();
-                    ArrayList<Edge> edgeList = new ArrayList<>();
-                    edgeSet.add(last);
-                    edgeList.add(last);
-                    for (int j = 0; j<edgeList.size(); j++) {
-                        for (Edge e: added.get(edgeList.get(j).getStart()).edges) {
-                            if (edgeSet.add(e)) edgeList.add(e);
-                        }
+            contract(n, (treeNode, pLen) -> {
+                if (pLen > reach + epsilon && pLen - treeNode.getEdgeFromParent().getLength() <= reach + epsilon) {
+                    Path p = treeNode.getPathFromRoot();
+                    LinkedList<Edge> pEdges = p.getEdges();
+                    while (pLen > reach + epsilon) {
+                        p.setStart(pEdges.getFirst().getStop());
+                        pLen -= pEdges.removeFirst().getLength();
                     }
-                    Collections.reverse(edgeList);
-                    for (Edge e: edgeList) {
-                        if (pLen-added.get(e.getStart()).d>reach+epsilon && pLen-added.get(e.getStop()).d<=reach+epsilon) {
-                            hyperNodes.addNodePair(e.getStop(), last.getStop());
-                        }
-                    }
+                    hyperNodes.addNodePair(p.getStart(), treeNode.getNode());
                 }
             });
         }
         i = 0;
         for (Node n: g.getNodes().values()) {
             if (++i%1000==0) System.out.println(i + "/" + g.getNodes().size());
-            contract(n, (added, last, pLen) -> {
-                if (last == null) return;
-                NodePair np0 = hyperNodes.getNodePair(n, last.getStart());
+            contract(n, (treeNode, pLen) -> {
+                Edge lastEdge = treeNode.getEdgeFromParent();
+                if (lastEdge == null) return;
+                NodePair np0 = hyperNodes.getNodePair(n, lastEdge.getStart());
                 if (np0 == null) return;
                 if (pLen<=reach+epsilon) {
-                    NodePair np1 = hyperNodes.addNodePair(n, last.getStop());
-                    Edge e_new = new Edge(last, np0, np1);
-                    e_new.id = last.id;
-                } else if (pLen-wg.getWeight(last)<=reach+epsilon) {
-                    Set<Edge> edgeSet = new HashSet<>();
-                    ArrayList<Edge> edgeList = new ArrayList<>();
-                    edgeSet.add(last);
-                    edgeList.add(last);
-                    for (int j = 0; j<edgeList.size(); j++) {
-                        for (Edge e: added.get(edgeList.get(j).getStart()).edges) {
-                            if (edgeSet.add(e)) edgeList.add(e);
-                        }
+                    NodePair np1 = hyperNodes.addNodePair(n, lastEdge.getStop());
+                    addEdge(np0, np1, lastEdge);
+                } else if (pLen-lastEdge.getLength()<=reach+epsilon) {
+                    Path p = treeNode.getPathFromRoot();
+                    LinkedList<Edge> pEdges = p.getEdges();
+                    while (pLen > reach + epsilon) {
+                        p.setStart(pEdges.getFirst().getStop());
+                        pLen -= pEdges.removeFirst().getLength();
                     }
-                    Collections.reverse(edgeList);
-                    for (Edge e: edgeList) {
-                        if (pLen-added.get(e.getStart()).d>reach+epsilon && pLen-added.get(e.getStop()).d<=reach+epsilon) {
-                            NodePair np1 = hyperNodes.getNodePair(e.getStop(), last.getStop());
-                            Edge e_new = new Edge(last, np0, np1);
-                            e_new.id = last.id;
-                        }
-                    }
+                    NodePair np1 = hyperNodes.getNodePair(p.getStart(), lastEdge.getStop());
+                    addEdge(np0, np1, lastEdge);
                 }
             });
         }
@@ -175,7 +158,7 @@ public class SPGraph extends Graph {
                         Node n_new = hyperNodes.addNodePair(new SimpleNode(), curNp.e);
                         Edge e_in_new = new Edge(e_in, e_in.getStart(), n_new);
                         e_in_new.id = e_in.id;
-                        for (Edge e_out : cur.getOutEdges()) {
+                        for (Edge e_out: cur.getOutEdges()) {
                             if (e_out != matching_out) {
                                 Edge e_new = new Edge(e_out, n_new, e_out.getStop());
                                 e_new.id = e_out.id;
@@ -189,75 +172,59 @@ public class SPGraph extends Graph {
     }
 
     private interface TreeNodeProcessor {
-        void process(HashMap<Node, DoubleEdgeSet> added, Edge last, double pLen);
+        void process(Tree.TreeNode lastNode, double pLen);
     }
 
     private void contract(Node n, TreeNodeProcessor p) {
-        HashMap<Node, DoubleEdgeSet> added = new HashMap<>();
-        HashMap<Node, DoubleEdgeSet> proposals = new HashMap<>();
-        Queue<NodeEdgeLen> queue = new PriorityQueue<>((o1, o2) -> o1.l<o2.l? -1 : (o1.l>o2.l? 1 : 0));
-        queue.add(new NodeEdgeLen(n, null, 0));
-        while (!proposals.isEmpty() || added.isEmpty()) {
-            NodeEdgeLen cur = queue.poll();
-            DoubleEdgeSet curAddDNS = added.get(cur.n);
-            if (curAddDNS==null) {
-                curAddDNS = new DoubleEdgeSet(cur.l);
-                added.put(cur.n, curAddDNS);
-                for (Edge e: cur.n.getOutEdges()) {
-                    double newL = cur.l+wg.getWeight(e);
-                    DoubleEdgeSet newAddDNS = added.get(e.getStop());
-                    if (newAddDNS==null || newL<newAddDNS.d+epsilon) {
-                        queue.add(new NodeEdgeLen(e.getStop(), e, newL));
-                        DoubleEdgeSet newDNS = proposals.get(e.getStop());
-                        if (newDNS != null && newL + epsilon < newDNS.d) {
-                            proposals.remove(e.getStop());
-                            newDNS = null;
-                        }
-                        if (cur.l <= reach + epsilon) {
-                            if (newDNS == null) {
-                                newDNS = new DoubleEdgeSet(newL);
-                                proposals.put(e.getStop(), newDNS);
-                            }
-                            if (newL < newDNS.d + epsilon) newDNS.edges.add(e);
-                        }
+        Tree t = new Tree();
+        Tree.TreeNode start = new Tree.TreeNode(t.getRoot(), n, null);
+        HashMap<Node, Double> added = new HashMap<>();
+        HashMap<Node, Double> proposed = new HashMap<>();
+        Queue<TreeNodeCostLen> queue = new PriorityQueue<>((o1, o2) -> o1.c<o2.c? -1 : (o1.c>o2.c? 1 : 0));
+        queue.add(new TreeNodeCostLen(start, 0, 0));
+        double lastAddCost = 0;
+        while (!queue.isEmpty()) {
+            TreeNodeCostLen cur = queue.poll();
+            Double curAddCost = added.get(cur.n.getNode());
+            if (curAddCost==null || cur.c<curAddCost+epsilon) {
+                if (curAddCost==null) {
+                    added.put(cur.n.getNode(), cur.c);
+                    curAddCost = cur.c;
+                }
+                if (proposed.isEmpty() && curAddCost>lastAddCost+epsilon) break;
+                lastAddCost = curAddCost;
+                proposed.remove(cur.n.getNode());
+                p.process(cur.n, cur.l);
+                for (Edge e: cur.n.getNode().getOutEdges()) {
+                    double newCost = curAddCost+wg.getWeight(e);
+                    Double newAddCost = added.get(e.getStop());
+                    Double newPropCost = proposed.get(e.getStop());
+                    if ((newAddCost==null || newCost<newAddCost+epsilon) && (newPropCost==null || newCost<newPropCost+epsilon)) {
+                        double newLength = cur.l+e.getLength();
+                        queue.add(new TreeNodeCostLen(new Tree.TreeNode(cur.n, e.getStop(), e), newCost, newLength));
+                        if (cur.l<=reach+epsilon) proposed.put(e.getStop(), newCost);
+                        else if (newPropCost==null || newCost+epsilon<newPropCost) proposed.remove(e.getStop());
                     }
                 }
             }
-            if (cur.l<curAddDNS.d+epsilon) {
-                if (cur.last!=null) curAddDNS.edges.add(cur.last);
-                if (cur.last!=null && cur.l-wg.getWeight(cur.last) <= reach + epsilon) {
-                    DoubleEdgeSet curDNS = proposals.get(cur.n);
-                    curDNS.edges.remove(cur.last);
-                    if (curDNS.edges.isEmpty()) proposals.remove(cur.n);
-                }
-                p.process(added, cur.last, cur.l);
-            }
         }
     }
 
-    private class DoubleEdgeSet {
-        private final double d;
-        private final Set<Edge> edges = new HashSet<>();
-        private DoubleEdgeSet(double d) {
-            this.d = d;
-        }
-    }
-
-    private class NodeEdgeLen {
-        private Node n;
-        private Edge last;
+    private class TreeNodeCostLen {
+        private Tree.TreeNode n;
+        private double c;
         private double l;
-        private NodeEdgeLen(Node n, Edge last, double l) {
+        private TreeNodeCostLen(Tree.TreeNode n, double c, double l) {
             this.n = n;
-            this.last = last;
+            this.c = l;
             this.l = l;
         }
     }
 
-    private class NodeLen {
-        private Node n;
+    private class NodePairLen {
+        private NodePair n;
         private double l;
-        private NodeLen(Node n, double l) {
+        private NodePairLen(NodePair n, double l) {
             this.n = n;
             this.l = l;
         }
@@ -266,85 +233,83 @@ public class SPGraph extends Graph {
     @Override
     public Graph getSubgraph(Node start, double len) {
         DistanceCalculator dc = new DistanceCalculator(start);
-        // Forward Dijkstra
-        HashMap<Node, Double> forwardLens = new HashMap<>();
-        contract(start, (added, last, pLen) -> {
-            if (pLen>reach+epsilon && pLen-wg.getWeight(last)<=reach+epsilon) {
-                Set<Edge> edgeSet = new HashSet<>();
-                ArrayList<Edge> edgeList = new ArrayList<>();
-                edgeSet.add(last);
-                edgeList.add(last);
-                for (int j = 0; j<edgeList.size(); j++) {
-                    for (Edge e: added.get(edgeList.get(j).getStart()).edges) {
-                        if (edgeSet.add(e)) edgeList.add(e);
-                    }
+        // Find starting nodes
+        HashMap<NodePair, Double> forwardLens = new HashMap<>();
+        HashSet<Node> createdNodes = new HashSet<>();
+        contract(start, (treeNode, pLen) -> {
+            Edge lastEdge = treeNode.getEdgeFromParent();
+            if (pLen>reach+epsilon && pLen-lastEdge.getLength()<=reach+epsilon) {
+                Path p = treeNode.getPathFromRoot();
+                LinkedList<Edge> pEdges = p.getEdges();
+                double pLenOrg = pLen;
+                while (pLen > reach + epsilon) {
+                    p.setStart(pEdges.getFirst().getStop());
+                    pLen -= pEdges.removeFirst().getLength();
                 }
-                Collections.reverse(edgeList);
-                for (Edge e: edgeList) {
-                    if (pLen-added.get(e.getStart()).d>reach+epsilon && pLen-added.get(e.getStop()).d<=reach+epsilon) {
-                        forwardLens.put(new NodePair(0, e.getStop(), last.getStop()), pLen);
-                    }
-                }
+                NodePair np = new NodePair(0, p.getStart(), treeNode.getNode());
+                createdNodes.add(np);
+                forwardLens.put(np, pLenOrg);
             }
         });
+        // Match those staring nodes to nodes from the actual graph
         HashSet<NodePair> startPairs = new HashSet<>();
-        Queue<NodeLen> q = new PriorityQueue<>((o1, o2) -> o1.l<o2.l? -1 : (o1.l>o2.l? 1 : 0));
+        Queue<NodePairLen> q = new PriorityQueue<>((o1, o2) -> o1.l<o2.l? -1 : (o1.l>o2.l? 1 : 0));
         for (Node n: getNodes().values()) {
             NodePair np = (NodePair) n;
-            Double l = forwardLens.get(np);
-            if (l!=null) {
-                forwardLens.remove(n);
+            if (createdNodes.remove(np)) {
                 startPairs.add((NodePair) n);
-                q.add(new NodeLen(n, l));
+                q.add(new NodePairLen(np, forwardLens.get(np)));
             }
         }
-        if (!forwardLens.isEmpty()) throw new IllegalArgumentException("Expected nodepairs are missing!");
+        if (!createdNodes.isEmpty()) throw new IllegalArgumentException("Expected nodepairs are missing!");
+        // Forward Dijkstra
+        forwardLens.clear();
         double curLen = -1;
         while (curLen<len && !q.isEmpty()) {
-            NodeLen curNl = q.poll();
-            Node curNode = curNl.n;
+            NodePairLen curNl = q.poll();
+            NodePair curNode = curNl.n;
             curLen = curNl.l;
             if (!forwardLens.containsKey(curNode)) {
                 forwardLens.put(curNode, curLen);
                 for (Edge e: curNode.getOutEdges()) {
                     double eTourLen = curLen+e.getLength() + dc.getDistance(e.getStop(), start);
                     if (!forwardLens.containsKey(e.getStop()) && eTourLen<len) {
-                        q.add(new NodeLen(e.getStop(), curLen+e.getLength()));
+                        q.add(new NodePairLen((NodePair) e.getStop(), curLen+e.getLength()));
                     }
                 }
             }
         }
         // Backward Dijkstra
-        HashMap<Node, Double> backwardLens = new HashMap<>();
+        HashMap<NodePair, Double> backwardLens = new HashMap<>();
         q.clear();
         for (Node n: getNodes().values()) {
             NodePair np = (NodePair) n;
             if (np.e == start) {
-                q.add(new NodeLen(n, 0));
+                q.add(new NodePairLen(np, 0));
             }
         }
         curLen = -1;
         while (curLen<len && !q.isEmpty()) {
-            NodeLen curNl = q.poll();
-            Node curNode = curNl.n;
+            NodePairLen curNl = q.poll();
+            NodePair curNode = curNl.n;
             curLen = curNl.l;
             if (!backwardLens.containsKey(curNode)) {
                 backwardLens.put(curNode, curLen);
                 for (Edge e: curNode.getInEdges()) {
                     double eTourLen = curLen + e.getLength() + dc.getDistance(start, e.getStart());
                     if (!backwardLens.containsKey(e.getStart()) && eTourLen<len) {
-                        q.add(new NodeLen(e.getStart(), curLen+e.getLength()));
+                        q.add(new NodePairLen((NodePair) e.getStart(), curLen+e.getLength()));
                     }
                 }
             }
         }
         // Extract subgraph
         Graph out = new Graph();
-        NodePairSet nps = new NodePairSet(out);
-        for (Map.Entry<Node, Double> nd: forwardLens.entrySet()) {
+        GraphNodePairSet nps = new GraphNodePairSet(out);
+        for (Map.Entry<NodePair, Double> nd: forwardLens.entrySet()) {
             Double backwardLen = backwardLens.get(nd.getKey());
             if (backwardLen!=null && nd.getValue()+backwardLen<=len) {
-                nps.addNodePair(((NodePair) nd.getKey()).s, ((NodePair) nd.getKey()).e);
+                nps.addNodePair(nd.getKey().s, nd.getKey().e);
             }
         }
         for (Node n: forwardLens.keySet()) {
@@ -367,51 +332,29 @@ public class SPGraph extends Graph {
                 addedStartPairs.add(np);
             }
         }
-        contract(start, (added, last, pLen) -> {
-            if (pLen>reach+epsilon && pLen-wg.getWeight(last)<=reach+epsilon) {
-                Set<Edge> edgeSet = new HashSet<>();
-                ArrayList<Edge> edgeList = new ArrayList<>();
-                edgeSet.add(last);
-                edgeList.add(last);
-                for (int j = 0; j<edgeList.size(); j++) {
-                    for (Edge e: added.get(edgeList.get(j).getStart()).edges) {
-                        if (edgeSet.add(e)) edgeList.add(e);
-                    }
+        contract(start, (treeNode, pLen) -> {
+            Edge lastEdge = treeNode.getEdgeFromParent();
+            if (pLen>reach+epsilon && pLen-lastEdge.getLength()<=reach+epsilon) {
+                Path p = treeNode.getPathFromRoot();
+                LinkedList<Edge> pEdges = p.getEdges();
+                while (pLen > reach + epsilon) {
+                    p.setStart(pEdges.getFirst().getStop());
+                    pLen -= pEdges.removeFirst().getLength();
                 }
-                boolean successors = false;
-                for (Edge e: edgeList) {
-                    if (pLen-added.get(e.getStart()).d>reach+epsilon && pLen-added.get(e.getStop()).d<=reach+epsilon) {
-                        NodePair np1 = nps.getNodePair(e.getStop(), last.getStop());
-                        if (np1!=null) {
-                            successors = true;
-                            addedStartPairs.remove(np1);
-                            NodePair np0 = nps.addNodePair(start, last.getStart());
-                            boolean add = true;
-                            for (Edge e0: np1.getInEdges()) {
-                                if (e0.getStart()==np0 && e0.id==e.id) add = false;
-                            }
-                            if (add) {
-                                Edge e_new = new Edge(last, np0, np1);
-                                e_new.id = last.id;
-                            }
-                        }
-                    }
-                }
-                if (successors) {
-                    edgeList.remove(0);
-                    Collections.reverse(edgeList);
-                    for (Edge e: edgeList) {
+                NodePair npf = nps.getNodePair(p.getStart(), treeNode.getNode());
+                addedStartPairs.remove(npf);
+                if (npf!=null) {
+                    // Ensure that the entire path to npf is present
+                    p = treeNode.getPathFromRoot();
+                    pEdges = p.getEdges();
+                    pEdges.removeLast();
+                    for (Edge e: pEdges) {
                         NodePair np0 = nps.addNodePair(start, e.getStart());
                         NodePair np1 = nps.addNodePair(start, e.getStop());
-                        boolean add = true;
-                        for (Edge e0: np1.getInEdges()) {
-                            if (e0.getStart()==np0 && e0.id==e.id) add = false;
-                        }
-                        if (add) {
-                            Edge e_new = new Edge(e, np0, np1);
-                            e_new.id = e.id;
-                        }
+                        addEdge(np0, np1, e);
                     }
+                    NodePair np0 = nps.addNodePair(start, lastEdge.getStart());
+                    addEdge(np0, npf, lastEdge);
                 }
             }
         });
@@ -430,58 +373,79 @@ public class SPGraph extends Graph {
         return out;
     }
 
+    private void addEdge(NodePair start, NodePair stop, Edge e) {
+        boolean add = true;
+        for (Edge e0 : start.getOutEdges()) {
+            if (e0.getStop() == stop && e0.id == e.id) {
+                add = false;
+                break;
+            }
+        }
+        if (add) {
+            Edge e_new = new Edge(e, start, stop);
+            e_new.id = e.id;
+        }
+    }
+
     public HashMap<Node, LinkedList<Edge>> getSubgraphFast(Node start) {
         HashMap<Node, LinkedList<Edge>> out = new HashMap<>();
-        MapNodePairSet nps = new MapNodePairSet(out);
+        NodePairSet nps = new NodePairSet();
         // Forward Dijkstra
-        contract(start, (added, last, pLen) -> {
-            if (pLen>reach+epsilon && pLen-wg.getWeight(last)<=reach+epsilon) {
-                Set<Edge> edgeSet = new HashSet<>();
-                ArrayList<Edge> edgeList = new ArrayList<>();
-                edgeSet.add(last);
-                edgeList.add(last);
-                for (int j = 0; j<edgeList.size(); j++) {
-                    for (Edge e: added.get(edgeList.get(j).getStart()).edges) {
-                        if (edgeSet.add(e)) edgeList.add(e);
-                    }
-                }
-                for (Edge e: edgeList) {
-                    if (pLen-added.get(e.getStart()).d>reach+epsilon && pLen-added.get(e.getStop()).d<=reach+epsilon) {
-                        NodePair np0 = hyperNodes.getNodePair(start, last.getStart());
-                        NodePair np1 = hyperNodes.getNodePair(e.getStop(), last.getStop());
-                        if (np0==null) {
-                            np0 = nps.addNodePair(start, last.getStart());
-                            LinkedList<Edge> np0Out = out.get(np0);
-                            boolean add = true;
-                            for (Edge e0 : np0Out) {
-                                if (e0.getStop() == np1 && e0.id == e.id) add = false;
-                            }
-                            if (add) {
-                                Edge e_new = Edge.getUncoupledEdge(last, np0, np1);
-                                e_new.id = last.id;
-                                np0Out.add(e_new);
-                            }
+        contract(start, (treeNode, pLen) -> {
+            Edge lastEdge = treeNode.getEdgeFromParent();
+            if (pLen>reach+epsilon && pLen-lastEdge.getLength()<=reach+epsilon) {
+                Path p = treeNode.getPathFromRoot();
+                LinkedList<Edge> pEdges = p.getEdges();
+                pEdges.removeLast();
+                for (Edge e: pEdges) {
+                    if (hyperNodes.getNodePair(start, e.getStart())==null) {
+                        NodePair np0 = nps.addNodePair(start, e.getStart());
+                        LinkedList<Edge> edges = out.get(np0);
+                        if (edges == null) {
+                            edges = new LinkedList<>();
+                            out.put(np0, edges);
                         }
-                    }
-                }
-                edgeList.remove(0);
-                Collections.reverse(edgeList);
-                for (Edge e: edgeList) {
-                    NodePair np0 = hyperNodes.getNodePair(start, e.getStart());
-                    if (np0==null) {
-                        np0 = nps.addNodePair(start, e.getStart());
                         NodePair np1 = hyperNodes.getNodePair(start, e.getStop());
                         if (np1 == null) np1 = nps.addNodePair(start, e.getStop());
-                        LinkedList<Edge> np0Out = out.get(np0);
                         boolean add = true;
-                        for (Edge e0 : np0Out) {
-                            if (e0.getStop() == np1 && e0.id == e.id) add = false;
+                        for (Edge e0 : edges) {
+                            if (e0.getStop() == np1 && e0.id == e.id) {
+                                add = false;
+                                break;
+                            }
                         }
                         if (add) {
                             Edge e_new = Edge.getUncoupledEdge(e, np0, np1);
                             e_new.id = e.id;
-                            np0Out.add(e_new);
+                            edges.add(e_new);
                         }
+                    }
+                }
+                NodePair np0 = hyperNodes.getNodePair(start, lastEdge.getStart());
+                if (np0 == null) {
+                    np0 = nps.addNodePair(start, lastEdge.getStart());
+                    pEdges.add(lastEdge);
+                    while (pLen > reach + epsilon) {
+                        p.setStart(pEdges.getFirst().getStop());
+                        pLen -= pEdges.removeFirst().getLength();
+                    }
+                    NodePair np1 = hyperNodes.getNodePair(p.getStart(), lastEdge.getStop());
+                    LinkedList<Edge> edges = out.get(np0);
+                    if (edges == null) {
+                        edges = new LinkedList<>();
+                        out.put(np0, edges);
+                    }
+                    boolean add = true;
+                    for (Edge e0 : edges) {
+                        if (e0.getStop() == np1 && e0.id == lastEdge.id) {
+                            add = false;
+                            break;
+                        }
+                    }
+                    if (add) {
+                        Edge e_new = Edge.getUncoupledEdge(lastEdge, np0, np1);
+                        e_new.id = lastEdge.id;
+                        edges.add(e_new);
                     }
                 }
             }
@@ -489,20 +453,16 @@ public class SPGraph extends Graph {
         return out;
     }
 
-    private class MapNodePairSet {
+    private class NodePairSet {
         private long idCnt = -1;
-        private final HashMap<Node, LinkedList<Edge>> map;
-        private final HashMap<NodePair, NodePair> pairs = new HashMap<>();
+        public final HashMap<NodePair, NodePair> pairs = new HashMap<>();
 
-        private MapNodePairSet(HashMap<Node, LinkedList<Edge>> map) {
-            this.map = map;
-        }
+        private NodePairSet() {}
 
         private NodePair addNodePair(Node s, Node e) {
             NodePair last = new NodePair(idCnt--, s, e);
             NodePair lastHyper = pairs.get(last);
             if (lastHyper==null) {
-                map.put(last, new LinkedList<>());
                 pairs.put(last, last);
                 lastHyper = last;
             }
